[package]
name = "steam-machine-id"
version = "0.1.0"
edition = "2021"
description = "For generating Steam machine IDs."
authors = ["Julia"]
homepage = "https://github.com/juliarose/steam-machine-id"
repository = "https://github.com/juliarose/steam-machine-id"
license = "MIT"
keywords = ["steam", "valve", "machineid"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1_smol = "1.0.0"
bytes = "^1.5.0"
rand = "^0.8"