[package]
name = "steam-machine-id"
version = "0.2.0"
edition = "2021"
# MSRV
rust-version = "1.63.0"
description = "For generating Steam machine IDs."
authors = ["Julia"]
repository = "https://github.com/juliarose/steam-machine-id"
license = "MIT"
keywords = ["steam", "valve", "machineid"]
readme = "README.md"

[dependencies]
sha1_smol = "1.0.0"
bytes = "^1.5.0"
rand = "^0.9"